--- a/Lecture 1/书生 · 浦语全链条开源开放体系.md
+++ b/Lecture 1/书生 · 浦语全链条开源开放体系.md
@@ -39,7 +39,7 @@
 
 ### 具体流程
 
-![image-20240210104401412](C:\Users\86195\AppData\Roaming\Typora\typora-user-images\image-20240210104401412.png)
+![](image/image_1.png)
 
 > 模型选型：从开源社区提供的模型中关注模型不同维度的能力（针对应用场景）
 >
@@ -159,7 +159,7 @@
 
 #### 智能体框架——Lagent
 
-![image-20240210114913900](C:\Users\86195\AppData\Roaming\Typora\typora-user-images\image-20240210114913900.png)
+![](image\image_2.png)
 
 - 支持多种类型的智能体能力
 - 灵活支持多种大语言模型
